<?xml version="1.0" encoding="utf-8"?>
<!--
 *=========================================================================
 *
 *  PROJECT:  SlimRoms
 *            Team Slimroms (http://www.slimroms.net)
 *
 *  COPYRIGHT Copyright (C) 2013 Slimroms http://www.slimroms.net
 *            All rights reserved
 *
 *  LICENSE   http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
 *
 *  AUTHORS:     fronti90, mnazim, tchaari, kufikugel
 *  DESCRIPTION: SlimOTA keeps our rom up to date
 *
 *=========================================================================
 *
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/slimOta"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/deviceTitleLayout"
        android:layout_marginLeft="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/deviceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:text="@string/device_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deviceTitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/deviceCodename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deviceName"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/curVerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curVer"
            android:layout_below="@id/deviceCodename"
            android:layout_marginTop="8dip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/curVer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/curVerTitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/curFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_below="@id/curVer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/upToDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_below="@id/curFile"
            android:text="@string/update_file_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/upToDate"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dip"
            android:layout_below="@id/curFile"
            android:layout_toRightOf="@id/upToDateTitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/updateIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_uptodate"
            android:layout_alignParentRight="true"
            android:layout_marginTop="18dp"
            android:layout_marginRight="10dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/line"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:id="@+id/shortCutsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </RelativeLayout>

</LinearLayout>
